# qmyspin-to-wrap-myspin-framework

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sh
cmake/: cross-brcm-arm-gcc-4.8.1.cmake  cross-general-arm-gcc-4.8.1.cmake  cross-tcc-arm-gcc-4.8.1.cmake
docs/: README.md
src/examples/: CMakeLists.txt
src/examples/myspin/: CMakeLists.txt  main.cpp
src/examples/myspin-qt/: QmySPIN-Application.pro  main.cpp  myspinlabel.cpp  myspinlabel.h  myspinwindow.cpp  myspinwindow.h  myspinwindow.ui
src/export/: CMakeLists.txt
src/export/include/: Device.h  QmySPIN.h
src/export/src/: PPCoordinator.cpp  PPCoordinator.h  QmySPIN.cpp  QmySPINImpl.cpp  QmySPINImpl.h
src/projection-handler/: CMakeLists.txt  ProjectionFactory.cpp  ProjectionFactory.h  ProjectionHandler.cpp  ProjectionHandler.h
src/projection-handler/abalta/: AbaltaHandler.cpp  AbaltaHandler.h
src/projection-handler/cinemo/: CinemoHandler.cpp  CinemoHandler.h
src/projection-handler/myspin/: mySPINHandler.cpp  mySPINHandler.h
src/projection-handler/sdl/: SdlHandler.cpp  SdlHandler.h
src/projection_handler/: ProjectionHandler.cpp
src/projection_handler/abalta/: AbaltaHandler.cpp  AbaltaHandler.h
src/projection_handler/cinemo/: CinemoHandler.cpp  CinemoHandler.h
src/projection_handler/myspin/: mySPINHandler.cpp
src/projection_handler/sdl/: SDLHandler.h  SdlHandler.cpp
src/transport-adapter/: CMakeLists.txt  Connection.cpp  Connection.h  Device.h  Scanner.cpp  Scanner.h  TransportAdapter.cpp  TransportAdapter.h  TransportAdapterFactory.cpp  TransportAdapterFactory.h
src/transport-adapter/bluetooth/: BluetoothConnection.cpp  BluetoothConnection.h  BluetoothDevice.cpp  BluetoothDevice.h  BluetoothScanner.cpp  BluetoothScanner.h  BluetoothTransportAdapter.cpp  BluetoothTransportAdapter.h
src/transport-adapter/tcp/: TcpConnection.cpp  TcpConnection.h  TcpDevice.cpp  TcpDevice.h  TcpScanner.cpp  TcpScanner.h  TcpTransportAdapter.cpp  TcpTransportAdapter.h
src/transport-adapter/usb/: UsbAOAConnection.cpp  UsbAOAConnection.h  UsbAOATransportAdapter.cpp  UsbAOATransportAdapter.h  UsbAndroidDevice.cpp  UsbAndroidDevice.h  UsbAppleDevice.cpp  UsbAppleDevice.h  UsbDevice.cpp  UsbDevice.h  UsbIAPConnection.cpp  UsbIAPConnection.h  UsbIAPTransportAdapter.cpp  UsbIAPTransportAdapter.h  UsbScanner.cpp  UsbScanner.h
src/transport-adapter/usb/libusb_wrapper/: LibUsbWrapper.h
src/utility/: CMakeLists.txt  Logger.cpp  Logger.h  Macro.h  QueueThread.h  Thread.cpp  Thread.h
