cmake_minimum_required(VERSION 2.8)

#=====================================================================================
# Version
#=====================================================================================

#=====================================================================================
# Build Options
#=====================================================================================

#=====================================================================================
# Sub directories
#=====================================================================================
set(INCPATHS
    ${CMAKE_SOURCE_DIR}/src/projection-handler
    ${CMAKE_SOURCE_DIR}/src/transport-adapter
    ${CMAKE_SOURCE_DIR}/src/export/include
    ${CMAKE_SOURCE_DIR}/src/utility
)

set(SOURCE_FILES ${SOURCE_FILES}
    src/QmySPIN.cpp src/QmySPINImpl.cpp
)

include_directories(
    ${INCPATHS}
)

#=======================================================================================
# Build sources
#=======================================================================================
add_library(projection-export SHARED ${SOURCE_FILES})

#=====================================================================================
# Install
#=====================================================================================
