cmake_minimum_required(VERSION 2.8)

#=====================================================================================
# Version
#=====================================================================================

#=====================================================================================
# Build Options
#=====================================================================================

#=====================================================================================
# Sub directories
#=====================================================================================
set(INCPATHS ${CMAKE_SOURCE_DIR}/src/utility)

include_directories(
    ${INCPATHS}
)

set(SOURCE_FILES ${SOURCE_FILES}
    Logger.cpp Thread.cpp)

#=======================================================================================
# Build sources
#=======================================================================================
add_library(utility SHARED ${SOURCE_FILES})

target_link_libraries(utility pthread)
#=====================================================================================
# Install
#=====================================================================================
